# DriftEngine

./: .gitignore  2026-05-07-104227-this-session-is-being-continued-from-a-previous-c.txt  2026-05-07-handoff-planet-lod-debug.md  2026-05-08-handoff-camera-and-persistence.md  2026-05-09-handoff-planet-water-to-firstperson.md  2026-05-09-handoff-species-lab-v001.md  2026-05-09-handoff-water-brush.md  2026-05-10-handoff-animals-lab-v000.md  2026-05-10-handoff-animals-lab-v001.md  2026-05-10-handoff-animals-lab-v002.md  2026-05-10-handoff-ecosystem-v01.md  2026-05-10-handoff-engine-core-extraction.md  2026-05-11-handoff-animals-lab-bird-snake.md  2026-05-11-handoff-globe-shader-fix.md  2026-06-11-handoff-planet-dev.md  ANIMALS_LAB_V0.md  CMakeLists.txt  ENGINE_V0.md  README.md
apps/animals_lab/: CMakeLists.txt  animals_lab.cpp  animals_lab.h  main.cpp
apps/animals_lab/shaders/: bone.fs.hlsl  bone.vs.hlsl  joint.fs.hlsl  joint.vs.hlsl  mesh.fs.hlsl  mesh.vs.hlsl
apps/globe/: globe.cpp  globe.h  pilot_main.cpp
apps/launcher/: CMakeLists.txt  app_wrapper.c  main.cpp
apps/planet_dev/: CMakeLists.txt  main.cpp  planet_dev.cpp  planet_dev.h
apps/planet_dev/shaders/: planet_dev_brush.cs.hlsl  planet_dev_terrain.fs.hlsl  planet_dev_terrain.vs.hlsl
apps/plant_lab/: CMakeLists.txt  main.cpp  plant_lab.cpp  plant_lab.h
apps/plant_lab/shaders/: clump.fs.hlsl  clump.vs.hlsl
apps/shared/: lab_common.h
apps/simCoupleTesting/: CMakeLists.txt  main.cpp
apps/simCoupleTesting/shaders/: world_terrain.fs.hlsl
apps/species_lab/: CMakeLists.txt  main.cpp
apps/world_lab/: CMakeLists.txt  main.cpp  world_lab.cpp  world_lab.h
apps/world_lab/shaders/: world_clump.vs.hlsl  world_creature.vs.hlsl  world_terrain.vs.hlsl
bestiary/: CMakeLists.txt  distribution.cpp  distribution.h  environment.cpp  environment.h  species_file.cpp  species_file.h
bestiary/animals/: animal_mesh.cpp  animal_mesh.h  bird.cpp  bird.h  herbivore.cpp  herbivore.h  predator.cpp  predator.h  rabbit.cpp  rabbit.h  snake.cpp  snake.h
bestiary/animals/walks/: bird_walk.cpp  herbivore_walk.cpp  predator_walk.cpp  rabbit_walk.cpp  snake_walk.cpp
bestiary/creature/: agent.h  creature_mesh.cpp  creature_mesh.h  creature_profile.cpp  creature_profile.h  herbivore.cpp  herbivore.h  spatial_grid.h  vegetation_field.cpp  vegetation_field.h
bestiary/morphology/: bush.cpp  bush.h  clump.cpp  clump.h  lplant.cpp  lplant.h  tree.cpp  tree.h  wildflower.cpp  wildflower.h
bestiary/skeleton/: animation.cpp  animation.h  joint.h  skeleton.cpp  skeleton.h  skinning.cpp  skinning.h
docs/: INPUT_UNIFICATION.md  PLANETARY_ECOSYSTEM.md  ROADMAP_PLANET_SCALE.md  WORLD_LAB_INTEGRATION.md
shaders/: atmosphere.cs.hlsl  atmosphere3d.cs.hlsl  atmosphere_planet.hlsli  cloud.fs.hlsl  cloud.vs.hlsl  cloud_raymarch.fs.hlsl  cloud_raymarch.vs.hlsl  erosion.hlsl  fullscreen.vs.hlsl  planet_climate.hlsli  planet_gen.cs.hlsl  planet_swe_h_adjust.cs.hlsl  planet_swe_init.cs.hlsl  planet_swe_step.cs.hlsl  river_overlay.fs.hlsl  river_overlay.vs.hlsl  sand_render.fs.hlsl  sand_render.vs.hlsl  sand_sim.cs.hlsl  sky.fs.hlsl  swe_init.hlsl  swe_step.hlsl  terrain.fs.hlsl  terrain.vs.hlsl  terrain_brush.hlsl  terrain_gen.cs.hlsl  tonemap.fs.hlsl  visualize.hlsl  water.fs.hlsl  water.vs.hlsl
snapshots/current-wip/: main.cpp  swe_step.hlsl  water.fs.hlsl
species/: browser.toml  grazer.toml  lowgrass1.toml  lowgrass2.toml  meadow_grazer.toml  medgrass1.toml  rabbit.toml  raptor.toml  snake.toml  songbird.toml  sprinter.toml  tallgrass1.toml  wolf.toml  world_bush.toml  world_grass.toml  world_reed.toml  world_tree.toml  world_wildflower.toml
src/: camera.cpp  camera.h  grid_util.cpp  grid_util.h  hydrology.cpp  hydrology.h  input.cpp  input.h  input_frame.h  input_poll.cpp  input_poll.h  main.cpp  pipeline.cpp  pipeline.h  planet.cpp  planet.h  renderer.cpp  renderer.h  resources.cpp  resources.h  terrain.cpp  terrain.h  ui.cpp  ui.h  vk_common.h  vk_util.cpp  vk_util.h
